--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   
   .progress {
     width: 100%;
-    -webkit-appearance: none;
+    -webkit-appearance: auto;
     height: 6px;
     background: #d3d3d3;
     outline: none;
